# zsh-frequency

./: Cargo.toml  LICENSE  README.org  zshhist
src/: helpers.rs  lib.rs  main.rs  outputs.rs  test.rs  zsh.rs
tests/: collector-2-strings  collector-build-map  collector-build-single  map-utf-16  top-check-recursive
